Lint fixes, improve proguard rules, add translations to google play